Changed config system to be more sane